fixed spacing on links pages

--- a/common/styles/_hub.scss
+++ b/common/styles/_hub.scss
@@ -10,7 +10,6 @@
 
   @media (min-width: $screen-sm-min) {
     display: grid;
-    grid-template-rows: 40% 40% 40% 40%;
     grid-template-columns: 50% 50%;
     padding: 5% 5% 51vh 5%;
   }
